--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,23 +8,14 @@ steps:
   name: 'gcr.io/cloud-builders/docker'
   args: ['ps']  
 
-- id: "Rodando o test da app GO"
+- id: "Rodando o ls app GO"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['exec', '-t', 'k8s-desafio-03-go', 'go', 'test']  
+  args: ['exec', '-t', 'k8s-desafio-03-go', 'ls']    
 
 - id: "Rodando o gerar binario"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['exec', '-t', 'k8s-desafio-03-go', 'go', 'buil','bruno.go']  
+  args: ['exec', '-t', 'k8s-desafio-03-go', 'go', 'build','bruno.go']  
 
-- id: "Gerar build da imagem"
+- id: "Rodando o test da app GO"
   name: 'gcr.io/cloud-builders/docker'
-  args:
-  - 'build'
-  - '-t'
-  - 'gcr.io/$PROJECT_ID/desafio-k8s:latest'
-  - '-t'
-  - 'gcr.io/$PROJECT_ID/desafio-k8s:0.0.1'
-  - '.'
-
-images:
-- 'gcr.io/$PROJECT_ID/desafio-k8s:0.0.1'
+  args: ['exec', '-t', 'k8s-desafio-03-go', 'go', 'test']  
